2015-03-05  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* Fixed typo recently introduced in the JNG reader
          (status != MagickFalse should be status == MagickFalse).

2015-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Fix memory leaks in error paths.

	* coders/xpm.c (ReadXPMImage): Fix memory leaks in error paths.

	* coders/miff.c (ReadMIFFImage): Fix memory leak of Image in error
	case.
	(ReadMIFFImage): Fix memory leaks of zlib and bzlib2 context in
	error path which reports decompression failure.

	* coders/bmp.c (ReadBMPImage): BMP reader was wrongly rejecting
	RLE-compressed files as being too small.  Fixes SourceForge bug
	#295 "1.3.21 identify regression".  Also fixed 'ping' support code
	which was still reading the pixels in 'ping' mode.
	(ReadBMPImage): Fix memory leak when BMP is handled as a sequence.

2015-03-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/palm.c (ReadPALMImage): PALM reader now applies PALM's
	special non-linear colormap if the file does not provide a custom
	colormap.  Custom colormap size is verified to not exceed image
	colors.  Added logging statements regarding colormap.

2015-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update for 1.3.21 release.

	* www/Changes.rst: Update for 1.3.21 release.

	* NEWS.txt: Update NEWS for 1.3.21 release.

	* version.sh: Bump/adjust library versioning.

2015-02-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c: Fix compilation under Cygwin. Thanks to Marco
	Atzeri for advising us of this problem.

2015-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/error.h (ThrowReaderException): More significant
	exceptions (e.g. errors) should overwrite less significant
	exceptions (e.g. warnings) thrown earlier.

	* coders/bmp.c (ReadBMPImage): Detect 32-bit integer overflows and
	other annoyances caused by intentionally broken files.  Also, only